--- a/ui/play.ui
+++ b/ui/play.ui
@@ -100,7 +100,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Картинка</string>
+           <string/>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
